# singlestoredb-extension-rust-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  extension.wit
.github/workflows/: release.yml  rust-docker.yml
src/: lib.rs
